Name:                hello
Version:             0.1.0
License:             MIT
License-file:        LICENSE
Author:              Travis CI
Maintainer:          contact+haskell-test-staging@travis-ci.org
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.2
Executable hello
  Main-is: HelloWorld.hs
  Build-depends:
    base >= 4,
    QuickCheck >= 2.4
Test-Suite test-foo
  type:       exitcode-stdio-1.0
  main-is:    Tests.hs
